--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       crossorigin=""
     />
 
+    <script
+      src="https://kit.fontawesome.com/b55dda5250.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>Position Locater</title>
   </head>
   <body>
